--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -170,7 +170,7 @@ ul.navbar-nav li a{
         line-height: 100px;
         text-transform: uppercase;
         margin-bottom: 0px;
-        border-bottom: solid #fff 1px;
+        border-bottom: solid #fa5b5b 1px;
         text-align: center;
     }
     .bg-payment h1 a {
@@ -244,7 +244,7 @@ ul.navbar-nav li a{
         line-height: 100px;
         text-transform: uppercase;
         margin-bottom: 0px;
-        border-bottom: solid #fff 1px;
+        border-bottom: solid #fa5b5b 1px;
         text-align: center;
     }
     .bg-payment h1 a {
